# guardian

./: .dockerignore  .env.example  .env.hub.example  .env.registry.example  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  codecov.yml  docker-compose.hub.yml  docker-compose.postgres.yml  docker-compose.registry.yml  docker-compose.yml
crates/client/: Cargo.toml  README.md  build.rs
crates/client/examples/: e2e.rs  e2e_with_keystore.rs
crates/client/proto/: guardian.proto  state_manager.proto
crates/client/src/: client.rs  error.rs  lib.rs  transaction.rs
crates/client/src/auth/: miden_ecdsa.rs  miden_falcon_rpo.rs  mod.rs
crates/client/src/keystore/: ecdsa.rs  falcon.rs  signer.rs  verification.rs
crates/client/src/masm/: mod.rs
crates/client/src/testing/: client_tests.rs  mocks.rs
crates/miden-multisig-client/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/miden-multisig-client/examples/: procedure_roots.rs
crates/miden-multisig-client/src/: account.rs  builder.rs  client.rs  config.rs  error.rs  execution.rs  export.rs  guardian_endpoint.rs  keystore.rs  lib.rs  payload.rs  procedures.rs  proposal.rs  psm_endpoint.rs  sync.rs
crates/miden-multisig-client/src/client/: account.rs  helpers.rs  io.rs  mod.rs  notes.rs  offline.rs  proposals.rs  state_codec.rs
crates/miden-multisig-client/src/transaction/: builder.rs  configuration.rs  configure.rs  consume.rs  guardian.rs  mod.rs  p2id.rs  payment.rs  psm.rs  switch_psm.rs
crates/miden-multisig-client/tests/: p2id_serial_vectors.rs
crates/miden-rpc-client/: Cargo.toml  README.md  build.rs
crates/miden-rpc-client/src/: lib.rs
crates/server/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  diesel.toml  verify-build-hash.sh
crates/server/bench/: README.md
crates/server/bench/config/: common.env  fs.env  postgres.env
crates/server/bench/k6/: body_limit.js  rate_limit.js
crates/server/bench/loadgen/: Cargo.toml
crates/server/bench/reports/: 2026-02-15.md
crates/server/bench/scripts/: collect_pg_metrics.sh  generate_report.sh  lib.sh  run_fs.sh  run_postgres.sh  run_postgres_canonicalization.sh
crates/server/migrations/2024-01-01-000001_initial_schema/: up.sql
crates/server/migrations/2026-01-01-000001_initial_schema/: down.sql  up.sql
crates/server/migrations/2026-03-12-000002_account_metadata/: down.sql  up.sql
crates/server/migrations/2026-04-27-000001_network_config_metadata/: down.sql  up.sql
crates/server/migrations/2026-05-05-000001_cosigner_commitment_index/: down.sql  up.sql
crates/server/migrations/2026-05-10-000001_promote_delta_status/: down.sql  up.sql
crates/server/migrations/2026-05-10-000002_account_metadata_pagination_index/: down.sql  up.sql
crates/server/migrations/2026-05-16-000001_admin_actions/: up.sql
crates/server/migrations/2026-05-19-000001_account_pause_fields/: down.sql  up.sql
crates/server/migrations/2026-05-25-000001_delta_metadata/: up.sql
crates/server/proto/: guardian.proto  miden_rpc.proto  state_manager.proto
crates/server/src/: build_info.rs  builder.rs  config.rs  delta_object.rs  error.rs  evm.rs  lib.rs  main.rs  openapi.rs  s3.rs  schema.rs  state.rs
crates/server/src/ack/: mod.rs  secrets_manager.rs
crates/server/src/ack/miden_ecdsa/: mod.rs  (+1 more)
crates/server/src/api/: dashboard.rs  dashboard_feeds.rs  dashboard_history.rs  evm.rs  grpc.rs  http.rs  mod.rs
crates/server/src/audit/: kinds.rs  log.rs  mod.rs  postgres.rs
crates/server/src/auth/: miden_falcon_rpo.rs  mod.rs
crates/server/src/builder/: canonicalization.rs  handle.rs  mod.rs  startup.rs  state.rs  storage.rs
crates/server/src/dashboard/: allowlist.rs  authz.rs  config.rs  cursor.rs  middleware.rs  mod.rs  permissions.rs  probe.rs  state.rs  types.rs  util.rs
crates/server/src/delta_summary/: build.rs  category.rs  decode.rs  mod.rs  projection.rs
crates/server/src/evm/: config.rs  contracts.rs  mod.rs  proposal.rs  service.rs  session.rs
crates/server/src/grpc/: mod.rs
crates/server/src/handlers/: configure.rs
crates/server/src/jobs/: canonicalize_deltas.rs
crates/server/src/metadata/: file_store.rs  filesystem.rs  mod.rs  network.rs  postgres.rs
crates/server/src/metrics/: config.rs  grpc.rs  http.rs  labels.rs  mod.rs  names.rs  recorder.rs  refresher.rs  router.rs  storage.rs
crates/server/src/middleware/: body_limit.rs  client_ip.rs  cors.rs  mod.rs  rate_limit.rs
crates/server/src/network/: miden.rs  mod.rs
crates/server/src/secret/: ct.rs  digest.rs  mod.rs  tests.rs  wrappers.rs
crates/server/src/services/: account_status.rs  canonicalize.rs  configure_account.rs  dashboard_account_delta_detail.rs  dashboard_account_deltas.rs  dashboard_account_proposals.rs  dashboard_account_snapshot.rs  dashboard_accounts.rs  dashboard_global_deltas.rs  dashboard_global_proposals.rs  dashboard_info.rs  dashboard_pagination.rs  delta_commit.rs  get_delta.rs  get_delta_head.rs  get_delta_proposal.rs  get_delta_proposals.rs  get_delta_since.rs  get_state.rs  lookup_account.rs  mod.rs  pause_account.rs  payload_normalize.rs  push_delta.rs  push_delta_proposal.rs  sign_delta_proposal.rs  unpause_account.rs
crates/server/src/storage/: filesystem.rs  mod.rs  postgres.rs
crates/server/src/testing/: generate_fixtures.rs  helpers.rs  mocks.rs  mod.rs
crates/server/src/utils/: commitment.rs
crates/server/tests/: canonicalization_lifecycle_test.rs  e2e_grpc_auth_test.rs  e2e_http_auth_test.rs  fetch_fixture_account.rs  generate_fixtures.rs  miden_rpc_integration_test.rs  utils.rs
crates/server/tests/fixtures/: account.json  commitments.json  delta_1.json  delta_2.json  delta_3.json
crates/shared/: Cargo.toml  README.md
crates/shared/src/: auth.rs  auth_request_message.rs  auth_request_payload.rs  felt.rs  hex.rs  lib.rs  lookup_auth_message.rs
crates/shared/tests/: lookup_auth_vectors.rs
examples/rust/: Cargo.toml  README.md
examples/rust/masm/: psm.masm
examples/rust/src/: falcon.rs  lib.rs  main.rs  main_mockchain.rs  miden.rs  multisig.rs  runner.rs
(+354 files in other folders)
