[workspace]
members = [
    "benchmarks/prod-server",
    "crates/shared",
    "crates/client",
    "crates/server",
    "crates/server/bench/loadgen",
    "crates/miden-rpc-client",
    "crates/miden-keystore",
    "crates/contracts",
    "crates/miden-multisig-client",
    "examples/rust",
    "examples/demo",
]
default-members = [
    "crates/shared",
    "crates/client",
    "crates/server",
    "crates/miden-rpc-client",
    "crates/miden-keystore",
    "crates/contracts",
    "crates/miden-multisig-client",
]
resolver = "2"

[workspace.package]
version = "0.14.9"
edition = "2024"
rust-version = "1.93"
authors = ["OpenZeppelin"]
license = "AGPL-3.0"
repository = "https://github.com/OpenZeppelin/guardian"
homepage = "https://github.com/OpenZeppelin/guardian"

# Reproducible build configuration (workspace-wide)
[profile.release]
strip = true           # Strip debug symbols for smaller, more reproducible binaries
lto = true            # Link-time optimization for better optimization and determinism
codegen-units = 1     # Single codegen unit for maximum reproducibility
incremental = false   # Disable incremental compilation for reproducibility

[workspace.dependencies]
# Core
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.47.1"
tonic = "0.14.2"
prost = "0.14.1"
tonic-build = "0.14.1"
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"
thiserror = "2.0.9"
hex = "0.4.3"
base64 = "0.22"
rand_chacha = "0.9.0"
tempfile = "3.15.0"
rand = "0.9"
anyhow = { version = "1.0", features = ["backtrace", "std"] }
assert_matches = "1.5"
rstest = "0.26"
futures = "0.3"
chrono = "0.4"

# Miden
miden-protocol = "0.15.3"
miden-standards = "0.15.3"
miden-tx = "0.15.3"
miden-node-proto ="0.15.0"
miden-testing = "0.15.3"
miden-client = { git = "https://github.com/0xMiden/miden-client.git", rev = "edf39b26494bbd3843af9417b9832816d2712df7" }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client.git", rev = "edf39b26494bbd3843af9417b9832816d2712df7" }
