[package]
name = "private-state-manager-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client-example"
path = "src/bin/example.rs"

[dependencies]
private-state-manager-shared = { path = "../shared" }
miden-objects = "0.11.4"
miden-lib = "0.11.4"
serde_json = "1.0.145"
miden-processor = "0.16.4"
miden-vm = "0.16.4"
