[package]
name = "miden-multisig-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level SDK for interacting with multisig accounts on Miden via GUARDIAN"

[dependencies]
# Internal crates
guardian-client = { version = "=0.14.9", path = "../client" }
guardian-shared = { version = "=0.14.9", path = "../shared" }
miden-confidential-contracts = { version = "=0.14.9", path = "../contracts" }

# Miden
miden-client = { workspace = true, features = ["tonic", "testing"] }
miden-client-sqlite-store = { workspace = true }
miden-protocol = { workspace = true }
miden-tx = { workspace = true }
miden-standards = { workspace = true }

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
rand = { workspace = true }

[features]
default = ["legacy-consume-notes"]
# Accept v1 `consume_notes` metadata (no `metadata_version`). The
# cut-over release will ship with `default = []`. Tracks issue #229.
legacy-consume-notes = []

[dev-dependencies]
tempfile = { workspace = true }
