[package]
name = "private-state-manager-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
aws-config = "1.8.7"
aws-sdk-s3 = "1.107.0"
aws-sdk-sts = "1.87.0"

# shared
private-state-manager-shared = { path = "../shared" }
