[package]
name = "psm-rust-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
private-state-manager-client = { path = "../../crates/client" }
private-state-manager-shared = { path = "../../crates/shared" }

# Miden client for transaction execution and proving
miden-client = { git = "https://github.com/0xMiden/miden-client.git", branch = "next", features = ["tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client.git", branch = "next", package = "miden-client-sqlite-store" }

tokio = { version = "1.42", features = ["full"] }
hex = "0.4"
tempfile = "3.15"
rand_chacha = "0.9"
base64 = "0.22"
serde_json = "1.0"
