[package]
name = "guardian-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
guardian-client = { path = "../../crates/client" }
guardian-shared = { path = "../../crates/shared" }
miden-confidential-contracts = { path = "../../crates/contracts" }

# Miden client for transaction execution and proving
miden-client = { workspace = true, features = ["tonic", "testing"] }
miden-client-sqlite-store = { workspace = true }
# miden-protocol is needed for types not re-exported by miden_client
miden-protocol = { workspace = true }
miden-tx = { workspace = true }

tokio = { workspace = true, features = ["full"] }
clap = { version = "4", features = ["derive"] }
hex = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
