[package]
name = "guardian-server-bench-loadgen"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
hex = { workspace = true }
miden-confidential-contracts = { path = "../../../contracts" }
miden-protocol = { workspace = true }
guardian-client = { path = "../../../client" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
chrono = { workspace = true }
